# r-autopkg

./: .gitignore  Cargo.toml
sample_data/: GoogleChrome_override.download.recipe  Tuple.download.recipe.yaml  Tuple.munki.recipe.yaml  sample_autopkg_recipe_map.json  sample_prefs.json
src/: constants.rs  lib.rs  main.rs
src/recipes/: mod.rs
